--- a/styleapp.css
+++ b/styleapp.css
@@ -5,7 +5,7 @@
 }
 header{
 
-	background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(../AllAppback.jpg);
+	background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(AllAppback.jpg);
 	height: 100vh;
 	background-size: cover;
 	background-position: center;
